crates/tokenless-schema/tests/snapshots/golden_snapshots__golden_format_deep_chain_enhanced.snap
---
source: crates/tokenless-schema/tests/golden_snapshots.rs
expression: "router_snapshot(&strategy, &output)"
---
{
  "output": "{\"data\":{\"user\":{\"profile\":{\"preferences\":{\"notifications\":{\"email\":{\"enabled\":true,\"frequency\":\"daily\"}}}}}}}",
  "strategy": "passthrough"
}
