crates/tokenless-schema/tests/snapshots/golden_snapshots__golden_format_schema_enum_enhanced.snap
---
source: crates/tokenless-schema/tests/golden_snapshots.rs
expression: "router_snapshot(&strategy, &output)"
---
{
  "output": "description: Search for products in the catalog using various filters including category, price range, and sorting options.\nname: search_products\nparameters: object",
  "strategy": "enhanced-toon"
}
