crates/tokenless-schema/tests/snapshots/golden_snapshots__golden_format_small_passthrough.snap
---
source: crates/tokenless-schema/tests/golden_snapshots.rs
expression: "router_snapshot(&strategy, &output)"
---
{
  "strategy": "passthrough",
  "output": "{\"status\":\"ok\",\"count\":3}"
}
