crates/tokenless-schema/tests/snapshots/golden_snapshots__golden_response_github_api.snap
---
source: crates/tokenless-schema/tests/golden_snapshots.rs
expression: result
---
{
  "data": {
    "repository": {
      "name": "tokenless",
      "description": "A high-performance token optimizer CLI built with Rust that provides 60-90% token savings on LLM API calls by intelligently compressing schemas, responses, and managing context windows for OpenAI and Anthropic function calling workloads.",
      "url": "https://github.com/TokenFleet-AI/tokenless",
      "stargazerCount": 128,
      "forkCount": 34,
      "issues": {
        "totalCount": 12
      }
    }
  }
}
