crates/tokenless-schema/tests/snapshots/golden_snapshots__golden_schema_weather_function.snap
---
source: crates/tokenless-schema/tests/golden_snapshots.rs
assertion_line: 44
expression: result
---
{
  "function": {
    "description": "Retrieves current weather conditions and forecast data for a given location. This function supports city names, ZIP codes, and geographic coordinates.",
    "name": "get_weather",
    "parameters": {
      "properties": {
        "forecast_days": {
          "description": "Number of days to include in the forecast, ranging from 1 to 14 days ahead. Defaults to 1 when not specified.",
          "maximum": 14,
          "minimum": 1,
          "type": "integer"
        },
        "include_hourly": {
          "default": false,
          "description": "Whether to include hour-by-hour weather data in the response for each forecast day. Enabling this flag significantly increases response size.",
          "type": "boolean"
        },
        "location": {
          "description": "The city name, ZIP code, or geographic coordinates for which to retrieve weather data. Examples include 'San Francisco, CA', '94105', or '37.7749,-122.4194'.",
          "type": "string"
        },
        "units": {
          "description": "The temperature unit system to use for the returned weather data. Celsius is the default for most international locations, while Fahrenheit is common in the Uni",
          "enum": [
            "celsius",
            "fahrenheit",
            "kelvin"
          ],
          "type": "string"
        }
      },
      "required": [
        "location"
      ],
      "type": "object"
    }
  },
  "type": "function"
}
